--- a/developer-portal-ui/src/app/components/test-cases/test-cases.component.scss
+++ b/developer-portal-ui/src/app/components/test-cases/test-cases.component.scss
@@ -1,7 +1,7 @@
 /*=== Documentation header section ===*/
 
 .documentation-header-section {
-  padding-top: 64px;
+  padding-top: 4vw;
   .documentation-header-title {
     color: var(--colorPrimary);
   }
